--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url(Imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -32,6 +32,22 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam expedita repellendus dolor quasi, asperiores dolore quas in vel ut repellat earum explicabo, a blanditiis. Debitis nisi eaque ipsam ab minima!
         Voluptas eaque ipsam ex iste at illum incidunt minus quisquam. Quos, ea mollitia numquam velit, possimus qui saepe dicta maxime id itaque fugiat! Vitae eum eligendi corrupti necessitatibus, modi nobis?
         Ab itaque non vero quia ea, dignissimos officiis tempora illo blanditiis ratione id iure numquam labore eius tempore quae magnam sint minus error nesciunt dolorum laborum harum! Cupiditate, modi placeat!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam expedita repellendus dolor quasi, asperiores dolore quas in vel ut repellat earum explicabo, a blanditiis. Debitis nisi eaque ipsam ab minima!
+        Voluptas eaque ipsam ex iste at illum incidunt minus quisquam. Quos, ea mollitia numquam velit, possimus qui saepe dicta maxime id itaque fugiat! Vitae eum eligendi corrupti necessitatibus, modi nobis?
+        Ab itaque non vero quia ea, dignissimos officiis tempora illo blanditiis ratione id iure numquam labore eius tempore quae magnam sint minus error nesciunt dolorum laborum harum! Cupiditate, modi placeat!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam expedita repellendus dolor quasi, asperiores dolore quas in vel ut repellat earum explicabo, a blanditiis. Debitis nisi eaque ipsam ab minima!
+        Voluptas eaque ipsam ex iste at illum incidunt minus quisquam. Quos, ea mollitia numquam velit, possimus qui saepe dicta maxime id itaque fugiat! Vitae eum eligendi corrupti necessitatibus, modi nobis?
+        Ab itaque non vero quia ea, dignissimos officiis tempora illo blanditiis ratione id iure numquam labore eius tempore quae magnam sint minus error nesciunt dolorum laborum harum! Cupiditate, modi placeat!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam expedita repellendus dolor quasi, asperiores dolore quas in vel ut repellat earum explicabo, a blanditiis. Debitis nisi eaque ipsam ab minima!
+        Voluptas eaque ipsam ex iste at illum incidunt minus quisquam. Quos, ea mollitia numquam velit, possimus qui saepe dicta maxime id itaque fugiat! Vitae eum eligendi corrupti necessitatibus, modi nobis?
+        Ab itaque non vero quia ea, dignissimos officiis tempora illo blanditiis ratione id iure numquam labore eius tempore quae magnam sint minus error nesciunt dolorum laborum harum! Cupiditate, modi placeat!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam expedita repellendus dolor quasi, asperiores dolore quas in vel ut repellat earum explicabo, a blanditiis. Debitis nisi eaque ipsam ab minima!
+        Voluptas eaque ipsam ex iste at illum incidunt minus quisquam. Quos, ea mollitia numquam velit, possimus qui saepe dicta maxime id itaque fugiat! Vitae eum eligendi corrupti necessitatibus, modi nobis?
+        Ab itaque non vero quia ea, dignissimos officiis tempora illo blanditiis ratione id iure numquam labore eius tempore quae magnam sint minus error nesciunt dolorum laborum harum! Cupiditate, modi placeat!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam expedita repellendus dolor quasi, asperiores dolore quas in vel ut repellat earum explicabo, a blanditiis. Debitis nisi eaque ipsam ab minima!
+        Voluptas eaque ipsam ex iste at illum incidunt minus quisquam. Quos, ea mollitia numquam velit, possimus qui saepe dicta maxime id itaque fugiat! Vitae eum eligendi corrupti necessitatibus, modi nobis?
+        Ab itaque non vero quia ea, dignissimos officiis tempora illo blanditiis ratione id iure numquam labore eius tempore quae magnam sint minus error nesciunt dolorum laborum harum! Cupiditate, modi placeat!</p>
+        
 </main>
 </body>
 </html>
